--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,14 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "typeRoots": ["src/types"],
+    "baseUrl": "./src",
+    "paths": {
+      "shared/*": ["./shared/*"],
+      "stores/*": ["./stores/*"],
+      "partials/*": ["./partials/*"],
+      "pages/*": ["./pages/*"],
+      "constants/*": ["./constants/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
