--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.72.0",
+    "stylelint": "^16.6.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
     "vite": "^5.2.0",
